export const snapshot = {};

snapshot[`Document View Command - Help Text 1`] = `
stdout:
"
Usage: view <id>

Description:

  View a document's content

Options:

  -h, --help  - Show this help.                        
  --raw       - Output raw markdown without rendering  
  -w, --web   - Open document in browser               
  --json      - Output full document as JSON           

"
stderr:
""
`;

snapshot[`Document View Command - View Document 1`] = `
stdout:
"# Delegation System

This document describes the delegation system architecture.

## Overview

The system supports user-to-user delegations with time-bounded capabilities.

## Implementation

- UCAN-based delegation chains
- PKH DID format for user identity
- Session key DIDs for signing
"
stderr:
""
`;

snapshot[`Document View Command - Raw Output 1`] = `
stdout:
"# Delegation System

This document describes the delegation system architecture.
"
stderr:
""
`;

snapshot[`Document View Command - JSON Output 1`] = `
stdout:
'{
  "id": "doc-1",
  "title": "Delegation System Spec",
  "slugId": "d4b93e3b2695",
  "content": "# Delegation System\\\\n\\\\nThis document describes the delegation system architecture.",
  "url": "https://linear.app/test/document/delegation-system-spec-d4b93e3b2695",
  "createdAt": "2026-01-15T08:00:00Z",
  "updatedAt": "2026-01-18T10:30:00Z",
  "creator": {
    "name": "John Doe",
    "email": "john@example.com"
  },
  "project": {
    "name": "TinyCloud SDK",
    "slugId": "tinycloud-sdk"
  },
  "issue": null
}
'
stderr:
""
`;

snapshot[`Document View Command - Document Not Found 1`] = `
stdout:
""
stderr:
'Failed to fetch document: Error: Document not found: nonexistent123: {"response":{"errors":[{"message":"Document not found: nonexistent123","extensions":{"code":"NOT_FOUND"}}],"status":200,"headers":{}},"request":{"query":"query GetDocument(\$id: String!) {\\\\n  document(id: \$id) {\\\\n    id\\\\n    title\\\\n    slugId\\\\n    content\\\\n    url\\\\n    createdAt\\\\n    updatedAt\\\\n    creator {\\\\n      name\\\\n      email\\\\n    }\\\\n    project {\\\\n      name\\\\n      slugId\\\\n    }\\\\n    issue {\\\\n      identifier\\\\n      title\\\\n    }\\\\n  }\\\\n}","variables":{"id":"nonexistent123"}}}
    at runRequest (file:///home/exedev/.cache/deno/npm/registry.npmjs.org/graphql-request/7.2.0/src/legacy/helpers/runRequest.ts:105:12)
    at eventLoopTick (ext:core/01_core.js:187:7)
    at async GraphQLClient.request (file:///home/exedev/.cache/deno/npm/registry.npmjs.org/graphql-request/7.2.0/src/legacy/classes/GraphQLClient.ts:131:22)
    at async Command.actionHandler (file:///home/exedev/workspace/linear-cli/src/commands/document/document-view.ts:50:22)
    at async Command.execute (https://jsr.io/@cliffy/command/1.0.0-rc.8/command.ts:1940:7)
    at async Command.parseCommand (https://jsr.io/@cliffy/command/1.0.0-rc.8/command.ts:1772:14)
    at async Object.fn (file:///home/exedev/workspace/linear-cli/test/commands/document/document-view.test.ts:186:7)
    at async runTest (https://jsr.io/@cliffy/testing/1.0.0-rc.8/snapshot.ts:263:5)
    at async snapshotTest (https://jsr.io/@cliffy/testing/1.0.0-rc.8/snapshot.ts:112:5)
    at async file:///home/exedev/workspace/linear-cli/test/commands/document/document-view.test.ts:160:1 {
  response: {
    data: undefined,
    errors: [
      {
        message: "Document not found: nonexistent123",
        extensions: { code: "NOT_FOUND" }
      }
    ],
    extensions: undefined,
    status: 200,
    headers: Headers {
      "access-control-allow-origin": "*",
      "content-type": "application/json",
      date: "Mon, 01 Jan 2024 00:00:00 GMT",
      vary: "Accept-Encoding"
    }
  },
  request: {
    query: "query GetDocument(\$id: String!) {\\\\n" +
      "  document(id: \$id) {\\\\n" +
      "    id\\\\n" +
      "    title\\\\n" +
      "    slugId\\\\n" +
      "    content\\\\n" +
      "    url\\\\n" +
      "    createdAt\\\\n" +
      "    updatedAt\\\\n" +
      "    creator {\\\\n" +
      "      name\\\\n" +
      "      email\\\\n" +
      "    }\\\\n" +
      "    project {\\\\n" +
      "      name\\\\n" +
      "      slugId\\\\n" +
      "    }\\\\n" +
      "    issue {\\\\n" +
      "      identifier\\\\n" +
      "      title\\\\n" +
      "    }\\\\n" +
      "  }\\\\n" +
      "}",
    variables: { id: "nonexistent123" }
  }
}
'
`;

snapshot[`Document View Command - Document Attached To Issue 1`] = `
stdout:
"# Investigation Notes

Notes from investigating TC-123.
"
stderr:
""
`;
